--- a/gb/18/8/19/n10649930.md
+++ b/gb/18/8/19/n10649930.md
@@ -1,35 +1,35 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlrgim293/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>马三家酷刑受害者：我要站出来说话(3)</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/08/84518c0cd2f84f18832e0b0ea9decdd4-600x400.jpg" />
 <h6>用身体带出的劳教日记。（刘华提供）
 </h6>
 <hr>
-	<p>【大纪元2018年08月23日讯】编者按：<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%88%98%E5%8D%8E.md#1">刘华</a>，一个普通中国农民，曾因<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%B8%8A%E8%AE%BF.md#1">上访</a>被关押在<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E9%A9%AC%E4%B8%89%E5%AE%B6.md#1">马三家</a>劳教所中，期间想尽办法偷偷记下《<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99%E6%97%A5%E8%AE%B0.md#1">劳教日记</a>》，后用各种方式包括用女性身体将日记秘密带出，这些高墙内原生态的散乱信息，拼凑出来的内容震惊中外，揭开了劳教所的黑幕一角，成为当年推动劳教制度废除的关键案例之一。</p>
-<p><ahref="https://github.com/wlrgim293/djy/blob/master/gb/18/7/19/n10575414.md#1">（接前文）</a></p>
+	<p>【大纪元2018年08月23日讯】编者按：<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%98%E5%8D%8E.md#1">刘华</a>，一个普通中国农民，曾因<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%8A%E8%AE%BF.md#1">上访</a>被关押在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E4%B8%89%E5%AE%B6.md#1">马三家</a>劳教所中，期间想尽办法偷偷记下《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99%E6%97%A5%E8%AE%B0.md#1">劳教日记</a>》，后用各种方式包括用女性身体将日记秘密带出，这些高墙内原生态的散乱信息，拼凑出来的内容震惊中外，揭开了劳教所的黑幕一角，成为当年推动劳教制度废除的关键案例之一。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/18/7/19/n10575414.md#1">（接前文）</a></p>
 <h2>六、三次劳教</h2>
 <p>2006年2月20号，俺和我家那位刚从厕所出来，头就被头套套住了，警察背着胳膊就把俺俩塞进警车，弄进了右安门派出所地下室。又拍照、又拍桌子，吓得我躺地上就开始抽。心脏缺氧，从晚上8点一直抢救我到下半夜2点。</p>
 <p>第二天我们当地派出所就来车了，市里还来了一个便衣，把我俩拉回沈阳，审了一天一宿，说我们“反党反社会主义，危害国家安全”。警察说：“你俩就别告了，承认你们错了，我们就不往看守所里送。”我俩也没有错呀，我一农民，一无枪、二无炮，我拿什么反党？送就送！结果我丈夫教养一年半，我给教养一年。</p>
 <p>因为孩子小，我是管外教养。我就在外面当保姆、在饭店给人打工，我精神没有垮，我没有错，怎么苦，我都要坚强地活下去！</p>
 <p>我丈夫蹲了一年半，他回来我就继续上北京国家信访局，继续举报。</p>
 <p>2009年8月5号，我进信访局领表，到二楼202接待室，接待的人看到我，就拿手机发短信，通知外面截访的。结果我下楼刚出大门，就看见一个人带四个截访的上来了，架住我胳膊说：“我们是沈阳维稳工作组的。”手一背，我又被塞进车，押到白纸坊桥附近的一个酒店地下室，把我看住了。</p>
-<p>我马上给国际人权组织打电话，告诉几点抓的我、现在我在什么方位。我还报110。110来了，我说：“他们非法绑架我。这是沈阳驻京办的黑监狱，我没有犯错，我上国家信访局<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%B8%8A%E8%AE%BF.md#1">上访</a>有什么错？这是我的权利。”当时驻京办事处维稳工作组的组长叫张良，他对110警察说：“没事呀，我们回家给她解决问题。”谈了挺长时间，他把警察给支走了。</p>
-<p>我被送回老家，直接拉进分局大院，不到10分钟，就被关进派出所，他们说，“你上了大纪元网站，你就是反党！”说了没两句，弄个手续就把我关进了<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E9%A9%AC%E4%B8%89%E5%AE%B6.md#1">马三家</a>，我被劳动教养十个月，罪名是“扰乱社会秩序”。</p>
+<p>我马上给国际人权组织打电话，告诉几点抓的我、现在我在什么方位。我还报110。110来了，我说：“他们非法绑架我。这是沈阳驻京办的黑监狱，我没有犯错，我上国家信访局<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%8A%E8%AE%BF.md#1">上访</a>有什么错？这是我的权利。”当时驻京办事处维稳工作组的组长叫张良，他对110警察说：“没事呀，我们回家给她解决问题。”谈了挺长时间，他把警察给支走了。</p>
+<p>我被送回老家，直接拉进分局大院，不到10分钟，就被关进派出所，他们说，“你上了大纪元网站，你就是反党！”说了没两句，弄个手续就把我关进了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E4%B8%89%E5%AE%B6.md#1">马三家</a>，我被劳动教养十个月，罪名是“扰乱社会秩序”。</p>
 <p>2010年的5月我被放出来，上访的问题不解决，怎么在家待呀，我又去了北京。</p>
 <p>2010年12月3日，我在北京地安门地铁站乘车，因身上只有五毛钱，就告诉地铁保安说我是上访的，因为当时是敏感时期（4号法制日，10号人权日），保安就通知了地铁警察，我身上带的上访材料被警察发现后，他们马上通知了苏家屯区分局，为稳定地方政绩，苏家屯红菱镇派出所把我送进了沈阳的棋盘山信访稳定分流调处中心。</p>
 <p>我一看这不就是黑监狱吗？棋盘山老大一个平房，有个像马三家那样的大院，里头的设备、吃的、用的、整个和教养院一样一样的，床单都一样！我想办法偷偷跑出去，买了个充电器，把手机充上电，把里面的什么“维稳调处中心”、什么“为党解忧、为民解难”的牌子都拍了照！上网我就发给了国际人权观察员，连“陪护证”都叫我给照下发过去了。</p>
 <p>两个女村民，戴个“陪护证”给我“陪护”，是我们村书记找的。我说我不是病号，陪什么护哇，她们就是监控我，再加上公安、保安，他们十一个人看着我一个！“陪护”的村民，村里给每人一天发100元钱，红菱镇政府每天还要向棋盘山交600元钱。</p>
-<p>他们说：“<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%88%98%E5%8D%8E.md#1">刘华</a>你比演员还牛呀，政府一天花二千多块钱雇这么多人看着你。”我说：“我没有任何违法行为，你们拿我整事，拿我挣钱了！”他们五天五夜不让我睡觉，折磨得受不了哇，就跟熬油似的，心觉得都熬干了。</p>
+<p>他们说：“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%88%98%E5%8D%8E.md#1">刘华</a>你比演员还牛呀，政府一天花二千多块钱雇这么多人看着你。”我说：“我没有任何违法行为，你们拿我整事，拿我挣钱了！”他们五天五夜不让我睡觉，折磨得受不了哇，就跟熬油似的，心觉得都熬干了。</p>
 <p>那雪下得老厚了，屋里没有暖气，冰窖似的。看我的警察在门卫屋里睡觉，都插着电褥子。我冷，哆嗦呀，冻得我拉肚子，血压也上来了，量一回血压就50元，一宿到天亮，光量血压就花了500，也不给看病。我看也没的活了，到了晚上，我把衣服脱吧脱吧，弄了一个大条子围脖挂上暖气管，上吊。我死在这里，我要让全世界都知道！挂上后，我一蹬凳子，“哐”一声，“陪护”听到了，“哎呀妈呀”，就把我抱下来了，说“你要是上吊死了，我们全白忙活了”。他们说2008年有个男访民，就在我站的这个暖气管子上，上吊吊死了。这不是小鬼催的吗？我怎么也挂在这里了！</p>
 <p>第二天他们赶紧把我送到看守所，看守所医生对警察说：10分钟一扒拉她！别让她死这里！她高压180、低压70，压差太大了，随时会死！关了十几天他们把我放了。</p>
 <p>放了我就去北京公安部告他们，结果又把我给抓了，说我“扰乱社会秩序”，第二天又给送回沈阳，苏家屯分局又圈了我五天，三班有人看着我，不让我睡觉，我两腿水肿，双眼发直，心脏犯病了，送去抢救后弄回了看所守。</p>
 <p>警察问我，“你是不是把棋盘山上网曝光了？”我说：“曝光你咋的呀？我说错了吗？你们是叫我上那学习法律吗？你们十几个人看着我一个人！那不就是黑监狱吗？”警察说，“只要你写保证，不告苏家屯公安局，保证不进京上访，就给你送家去，你两口子给低保。你再告公安局还劳教你，而且你丈夫也抓回来劳教！”我没有答应，又被劳教二年，我丈夫被劳教一年半。</p>
 <p>2011年的1月，我又第二次给关进了马三家劳教所。</p>
-<h2>七、在劳教所写<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99%E6%97%A5%E8%AE%B0.md#1">劳教日记</a></h2>
+<h2>七、在劳教所写<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99%E6%97%A5%E8%AE%B0.md#1">劳教日记</a></h2>
 <p>进了马三家劳教所，我就开始观察，我告诉自己：你记住，你什么都给我记住！</p>
 <p>被关进马三家两次，我都记得特别清楚，有多少上访的、有多少法轮功、谁做多少活、谁谁谁挨打了、谁谁打人、怎么打的、谁花钱买减期、谁谁收贿赂，警察都是有名有姓的，连队长的警号、电话号码都记下了。劳教所干什么活？一个月多少产量？几点几点都干什么了。在劳教所里，只要你让我活着，我就天天写日记，每天吃什么饭、什么菜，鸭蛋卖2块钱一个，火腿肠10块钱，12个饺子15块钱等等，一天一天的，我收集，我都记下。</p>
-<figure id="attachment_10661630" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/08/aaa8981c86c631ed4c88125fc3285bfa.jpg"><img class="wp-image-10661630 size-large" src="https://i.epochtimes.com/assets/uploads/2018/08/aaa8981c86c631ed4c88125fc3285bfa-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">用身体带出的劳教日记。（刘华提供）</figcaption></figure>
+<figure id="attachment_10661630" aria-describedby="caption-attachment-10661630" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/08/aaa8981c86c631ed4c88125fc3285bfa.jpg"><img class="wp-image-10661630 size-large" src="https://i.epochtimes.com/assets/uploads/2018/08/aaa8981c86c631ed4c88125fc3285bfa-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10661630" class="wp-caption-text">用身体带出的劳教日记。（刘华提供）</figcaption></figure>
 <p>第二次到马三家，第二天她们就让我下车间，那时我走路要两个人搀着，管教说，“你不认罪，就必须完成双倍生产定额。”每天我都要干四道工序，累得心脏抖搐，完不成定额就是一顿拳打脚踢。</p>
 <p>我们做军队的武警服装，武警大衣什么的，消防队救火时穿的金黄色防火服，也是我们做的，那时一天要做240套，累死了，2009年到2010年那一套衣服就卖八百多（人民币）。</p>
 <p>我们还做韩国的衬衣、汗衫，做了三万多。做了十万件出口意大利的鸭绒棉袄，生产商是捷克。鸭绒大衣的内胆，一天要做260件，装羽绒的时候，大热天不让开电扇，电扇一开，满屋子飞毛，活就干不了了。空气中的毛毛全吸到肺里去，眼睛感染，整个烂了。身上都是毛，裤衩里往外一拽都是毛。电机（缝纫机是由电机带动的）一天天地不停转，那个机器跑得快呀，刷刷的，缝纫针都是红的，都冒蓝烟，手碰到缝纫机的针，马上就一个大水泡。每天刷刷地干，劳教所挣老钱了。我们一天要工作10个小时甚至11个小时，完不成任务就加班。还干不完就是加期、体罚，晚上回来，体罚到半夜。</p>
@@ -40,17 +40,17 @@
 <p>受苦最多的是法轮功，法轮功受的苦超过我们访民。</p>
 <p>我两次在里面见过的法轮功学员加一起有六七百人吧，那时劳教所法轮功最多。我在那会儿，劳教所四百多人，法轮功就占了二百多。为了让她们做奴工，警察花钱分批买外地的法轮功劳教人员。第一批送进来50多法轮功，2008年3月18号抓的，第二批是“六四”抓的，60多人。我搜集了六批，包括法轮功的经历，后来我把这用匿名的方式给了国际人权组织。</p>
 <p>我记法轮功的人数。2009年我数过，一大队、二大队，72个法轮功干活。三楼那层是210～220个人。每天上食堂吃饭，我们先吃完了，法轮功下去二楼站着，我就开始数，一个个数，一共有多少人，有多少人上食堂，经常后面的有那么十来个人，从她们走路的姿势看，是被上“大挂”了，因为上完“大挂”手都弯曲着，走路东歪西扭的，拉拉胯嘛。我一直在观察，下了很多功夫。法轮功穿黑色劳教服，包括她们穿的棉袄、戴的商标，我全记。</p>
-<figure id="attachment_6541641" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/01/1601081651332192.jpg"><img class="wp-image-6541641 size-large" src="https://i.epochtimes.com/assets/uploads/2016/01/1601081651332192-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">中共酷刑示意图：上大挂（明慧网）</figcaption></figure>
+<figure id="attachment_6541641" aria-describedby="caption-attachment-6541641" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/01/1601081651332192.jpg"><img class="wp-image-6541641 size-large" src="https://i.epochtimes.com/assets/uploads/2016/01/1601081651332192-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-6541641" class="wp-caption-text">中共酷刑示意图：上大挂（明慧网）</figcaption></figure>
 <p>法轮功学员顾新华做武警大衣，她的工序是上大衣胳肢窝里的透气圆，她干活时我给她画边，每天她做220件大衣，我就给她画440个圆。本来她劳教期满应该回家，车间那不是流水线干活嘛，她走了这个活就没人干了，队里培训了好几个，谁也拿不下这个活，队长就找个茬儿，说顾新华晚上写“心得体会”，叫人把她眼睛都给她打绿了，又加期两个月，继续干活，这批活结束才让她回家。</p>
 <p>法轮功学员辛淑华，本溪人，原来得了肠癌，癌细胞扩散，人不行了，学大法病好了，所以她也为法轮功上访。警察电棍过她，她就发正念，结果那电棍把警察打倒好几回，后来警察说：“老辛你是上帝，服了你了！”从那开始，也不打老辛了。老辛天天炼功，盘腿发正念，一点活也不干，大法真厉害！我有手纸就给她一点，警察不许她有手纸，老辛只能洗一块小布当手纸反复用。我和刘霞也长期都用一块布当卫生巾用。</p>
 <p>刘霞也是法轮功学员，写“心得体会”时说了真话，队长就把刘霞带走了。我就问大队长：“刘霞哪去了？”“你问这干哈呀？”她们把刘霞抓到东岗上大挂，挂了一天一宿。</p>
-<figure id="attachment_6707791" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2013/05/1305280316031528.jpg"><img class="wp-image-6707791 size-large" src="https://i.epochtimes.com/assets/uploads/2013/05/1305280316031528-600x504.jpg" alt="" width="600" b="504" /></a><figcaption class="wp-caption-text">马三家教养院警察给法轮功学员上酷刑“上大挂”的演示图。（明慧网）</figcaption></figure>
+<figure id="attachment_6707791" aria-describedby="caption-attachment-6707791" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2013/05/1305280316031528.jpg"><img class="wp-image-6707791 size-large" src="https://i.epochtimes.com/assets/uploads/2013/05/1305280316031528-600x504.jpg" alt="" width="600" b="504" /></a><figcaption id="caption-attachment-6707791" class="wp-caption-text">马三家教养院警察给法轮功学员上酷刑“上大挂”的演示图。（明慧网）</figcaption></figure>
 <p>我和法轮功学员苏南床挨床，苏南在四川监狱待了五年，出来在北京继续炼法轮功，又给关进了马三家。不到40的她像70岁老太太，例假折磨得都没有了，手一沾凉水，脸“唰”全白，一点血色都没有。每天我都多要一点热水给她。她挨着我干活，安排她递料，那活安排得满满的，哎呀！给苏南累得非常瘦，就像小鸡子那样，抖落抖落的。</p>
 <p>法轮功学员王金凤的牙被她们用鞋底子抽掉了4颗，我告诉她应该把牙拿出去，那是最好的证据，后来她手纸一包就拿出去了。</p>
 <p>我两次被关进马三家，都从里面带出了我写的《劳教日记》。有笔才能写啊，但笔在马三家是违禁品。一些好心人、法轮功学员我给点鸭蛋什么的，我就给管我们的“大四防”（由警察任命管理劳教人员的劳教人员），让她们给我偷圆珠笔芯，光笔芯我就用了一百多根，这些笔也不怎么好使，写字黑乎乎，平时还要仔细偷偷藏在鞋、衣服里。</p>
 <p>下黑（晚上）我就蒙个被子，偷偷露个小缝，窝着在里面写，问起来就说是肚子痛。在车间我也偷偷写，有一次写东西被警察看见了，我赶紧卷起来，一下吞肚子里了。写完了先藏起来，塞进衣服案板的小缝里，或者缝纫机空心腿里，棉袄、裤衩里也塞。</p>
 <p>后来因为纸张带不出劳教所了，我就用布写，衬裤或T恤绞下来的布，薄，稀软，还有做内胆的防雨布下脚料，一笔一笔写上去。第一批带出来时管理松，还可以把纸和布藏棉被、棉袄里，后来写字的布就只能从阴道带出来了，搁橡胶手套卷跟紧跟紧的，用手指慢慢弄进去。这是十几人的心血，我自己带出两批，还有上访的，还有法轮功学员，还有普教，都帮我带过，我说你们一定要把这东西捎出去，这不是我自己的事情，这是大家伙的事情，带出来她们再交给我。</p>
-<figure id="attachment_10661633" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/08/59a146d9b49e19dad915c3b266c7f319.jpg"><img class="wp-image-10661633 size-large" src="https://i.epochtimes.com/assets/uploads/2018/08/59a146d9b49e19dad915c3b266c7f319-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">用身体带出的劳教日记。（刘华提供）</figcaption></figure>
+<figure id="attachment_10661633" aria-describedby="caption-attachment-10661633" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/08/59a146d9b49e19dad915c3b266c7f319.jpg"><img class="wp-image-10661633 size-large" src="https://i.epochtimes.com/assets/uploads/2018/08/59a146d9b49e19dad915c3b266c7f319-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10661633" class="wp-caption-text">用身体带出的劳教日记。（刘华提供）</figcaption></figure>
 <p>开始阴道、肛门还不搜，后期阴道、肛门都搜，警察戴手套进去掏，她们专门掏卖淫的，她们哪敢掏上访的，那不等挨告哇。</p>
 <p>在劳教所不签考核，就不给减期，签了就说明警察教育得好。不签，警察就拿不着奖金，我一回都不签。二大队大队长对我说：“我工作了这么多年，就算我求你了刘华，你给我画个圆满句号好不好？”我说：“我来不是给你画句号的，你以为我来是给你画句号的？我没犯法，我画就是纵容你，你才是罪犯，我凭什么给你画句号？”</p>
 <p>2012年9月，司法局来人检查，我给他们翻出1991年司法部16号令，那是我在车间内干活时，从废纸蒌里拣到的，其中规定，不准虐待、体罚劳教学员；不准超负荷劳动；不准对劳教学员滥用刑具；不准关小号、关禁闭；不准收押丧失劳动能力的人；不能收押患有重大疾病如心脏病等的；不准收押聋哑人、孕妇等，但马三家劳教所全部违反啊，我就给揭发出来了。</p>
@@ -68,36 +68,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/4/18/n7568758.md#1">尹丽萍美国会作证 国际聚焦马三家骇人罪行</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/5/13/n7890736.md#1">马三家幸存者向美国政要递交受迫害资料</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/7/14/n8100500.md#1">杨宁：鹿宁死不进“马三家”说明了什么？</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/24/n8233614.md#1">袁凌：她们走出马三家之后......</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/4/18/n7568758.md#1">尹丽萍美国会作证 国际聚焦马三家骇人罪行</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/13/n7890736.md#1">马三家幸存者向美国政要递交受迫害资料</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/14/n8100500.md#1">杨宁：鹿宁死不进“马三家”说明了什么？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/24/n8233614.md#1">袁凌：她们走出马三家之后......</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/3/n11630909.md#1" target="_blank">林辉：中共对万里长城的破坏与利用</a></li><li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234388.md#1" target="_blank">【征文】文宇：科举千年兴衰录（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949968.md#1">【一线采访】收入见底 武汉人生活陷绝境</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/19/n10649930.htm">马三家酷刑受害者：我要站出来说话(3)</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/19/n10649930.htm">马三家酷刑受害者：我要站出来说话(3)</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wlrgim293/djy/blob/master/gb/18/8/19/n10649930.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/8/19/n10649930.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
